tests/errors/UndeclaredScalar.imp
VAR
BEGIN
  a := 42;
END
